cree el navbar y le puse todas las cosas para que pueda funcionar correctamente.

--- a/1era-entrega-react/src/App.css
+++ b/1era-entrega-react/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 }
+
+/*NAVBAR*/
+
+.app-content {
+  margin-top: 70px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+
