--- a/1era-entrega-react/src/components/navbar.css
+++ b/1era-entrega-react/src/components/navbar.css
@@ -1,17 +1,19 @@
 .navbar {
-    position: fixed;
-    top: 0;          
-    left: 0;         
-    width: 99%;     
-    display: flex;   
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #007bff; 
-    color: white;             
-    z-index: 1000;            
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 100vw; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px; 
+  background-color: #007bff; 
+  color: white; 
+  z-index: 1000; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
   
   .navbar-logo {
     font-size: 24px;
