--- a/1era-entrega-react/src/components/navbar/navbar.css
+++ b/1era-entrega-react/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
   position: fixed; 
   top: 0;
   left: 0;
-  width: 100%; 
+  width: 100%;
   z-index: 1000;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -43,6 +43,20 @@
 
 .navbar-links a:hover {
   color: #ffdd57;
+}
+
+/* Estilo del carrito */
+.cart-widget {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+}
+
+.cart-widget span {
+  margin-left: 5px;
+  font-weight: bold;
 }
 
   
