Final proyect, cambio de color de navbar

--- a/1era-entrega-react/src/components/navbar/navbar.css
+++ b/1era-entrega-react/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
   align-items: center; 
   justify-content: space-between; 
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #ff4b4b;
   color: white;
   position: fixed; 
   top: 0;
